update HTML class names

--- a/Podstawy HTML i CSS/preview/index.html
+++ b/Podstawy HTML i CSS/preview/index.html
@@ -22,12 +22,20 @@
 					Discover the benefits of data analytics and make better decisions regarding revenue,
 					customer experience, and overall efficiency.
 				</p>
-				<p class="card__counter">10k+</p>
-				<p class="card__label">companies</p>
-				<p class="card__counter">314</p>
-				<p class="card__label">templates</p>
-				<p class="card__counter">12m+</p>
-				<p class="card__label">queries</p>
+				<div class="card__stats">
+					<div class="card__stat">
+						<p class="card__counter">10k+</p>
+						<p class="card__label">companies</p>
+					</div>
+					<div class="card__stat">
+						<p class="card__counter">314</p>
+						<p class="card__label">templates</p>
+					</div>
+					<div class="card__stat">
+						<p class="card__counter">12M+</p>
+						<p class="card__label">queries</p>
+					</div>
+				</div>
 			</div>
 
 			<div class="card__hero"></div>
